WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
54495
Crash in EventHandler::sendContextMenuEventForKey
https://bugs.webkit.org/show_bug.cgi?id=54495
Summary
Crash in EventHandler::sendContextMenuEventForKey
Emil A Eklund
Reported
2011-02-15 13:59:25 PST
Crash in EventHandler::sendContextMenuEventForKey when a context menu key event (VK_APPS) is triggered on an element not in the rendering tree. Downstream chromium bug:
http://code.google.com/p/chromium/issues/detail?id=70069
This affects windows and linux builds (mac builds are unaffected as there's no way to trigger the context menu event on mac as far as I can tell).
Attachments
Patch
(7.04 KB, patch)
2011-02-15 14:01 PST
,
Emil A Eklund
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Emil A Eklund
Comment 1
2011-02-15 14:01:31 PST
Created
attachment 82517
[details]
Patch
WebKit Commit Bot
Comment 2
2011-02-16 16:28:04 PST
Comment on
attachment 82517
[details]
Patch Rejecting
attachment 82517
[details]
from commit-queue. Failed to run "['./Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=cr-jail-3', 'land-a..." exit_code: 1 Last 500 characters of output: ommit-queue/Tools/Scripts/webkitpy/tool/commands/stepsequence.py", line 64, in _run step(tool, options).run(state) File "/mnt/git/webkit-commit-queue/Tools/Scripts/webkitpy/tool/steps/validatereviewer.py", line 57, in run if self._has_valid_reviewer(changelog_entry): File "/mnt/git/webkit-commit-queue/Tools/Scripts/webkitpy/tool/steps/validatereviewer.py", line 42, in _has_valid_reviewer if changelog_entry.reviewer(): AttributeError: 'NoneType' object has no attribute 'reviewer' Full output:
http://queues.webkit.org/results/7929253
Dimitri Glazkov (Google)
Comment 3
2011-02-16 16:32:39 PST
Comment on
attachment 82517
[details]
Patch try again!
WebKit Commit Bot
Comment 4
2011-02-16 18:39:09 PST
Comment on
attachment 82517
[details]
Patch Rejecting
attachment 82517
[details]
from commit-queue. Failed to run "['./Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=eseidel-cq-sf', 'la..." exit_code: 1 Last 500 characters of output: le "/Projects/CommitQueue/Tools/Scripts/webkitpy/tool/commands/stepsequence.py", line 64, in _run step(tool, options).run(state) File "/Projects/CommitQueue/Tools/Scripts/webkitpy/tool/steps/validatereviewer.py", line 57, in run if self._has_valid_reviewer(changelog_entry): File "/Projects/CommitQueue/Tools/Scripts/webkitpy/tool/steps/validatereviewer.py", line 42, in _has_valid_reviewer if changelog_entry.reviewer(): AttributeError: 'NoneType' object has no attribute 'reviewer' Full output:
http://queues.webkit.org/results/7917628
Emil A Eklund
Comment 5
2011-02-17 12:37:28 PST
Darin, would you mind setting the cq flag? It looks like it needs to be set by the reviewer.
Eric Seidel (no email)
Comment 6
2011-02-17 13:08:21 PST
Comment on
attachment 82517
[details]
Patch Just needs to be set by a committer. Someone else saw this strange exception on a nother bug. It's possible we had a regression checked into the python code last night.
Emil A Eklund
Comment 7
2011-02-17 13:11:19 PST
Thanks Eric, wasn't quite sure what to make of the error message.
WebKit Commit Bot
Comment 8
2011-02-18 16:50:10 PST
Comment on
attachment 82517
[details]
Patch Clearing flags on attachment: 82517 Committed
r79049
: <
http://trac.webkit.org/changeset/79049
>
WebKit Commit Bot
Comment 9
2011-02-18 16:50:14 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug